--- a/index.Rmd
+++ b/index.Rmd
@@ -1,13 +1,12 @@
 ---
 title: "Data wrangling & manipulation in R"
-subtitle: |
-  | Postgraduate Workshop
-  | Department of Biological Sciences, UCT
-  | ![](images/BIO.png){ width=25px } ![](images/UCT.png){ width=25px }
+subtitle: "Dept. Biological Sciences Postgraduate Workshop"
 author: "Ruan van Mazijk"
 date: "`r Sys.Date()`"
 fig_caption: yes
-mainfont: Avenir
+output:
+  ioslides_presentation:
+    logo: images/logos/BIO.png
 ---
 
 ```{r setup, include=FALSE}
@@ -15,13 +14,79 @@ knitr::opts_chunk$set(echo = TRUE, eval = TRUE)
 library(tidyverse)
 ```
 
-# Outline
+## Motivation
 
-<!-- TODO: toc: true -->
-
-# Long vs wide data
-
-```{r}
-knitr::kable(head((iris)))
+```{r motivating-example, echo=FALSE, out.height="500px", fig.cap="An example data-collection scenario in biology"}
+knitr::include_graphics("images/motivating-example/data-collection-scenario_crop.png")
 ```
 
+***
+
+```{r motivating-example-1, echo=FALSE, out.width="800px", fig.cap="_One_ way to lay out your collected data..."}
+knitr::include_graphics("images/motivating-example/motivating-example-1.png")
+```
+
+***
+
+```{r motivating-example-2, echo=FALSE, out.width="800px", fig.cap="Another way..."}
+knitr::include_graphics("images/motivating-example/motivating-example-2.png")
+```
+
+***
+
+```{r motivating-example-3, echo=FALSE, out.width="800px", fig.cap="The \"best\" way. Will make your life easiest in the long-term."}
+knitr::include_graphics("images/motivating-example/motivating-example-3.png")
+```
+
+## Workshop outline
+
+<!-- TODO -->
+
+## Long vs wide data
+
+```{r motivating-example-again, echo=FALSE, out.width="800px"}
+knitr::include_graphics("images/motivating-example/motivating-example-1.png")
+```
+
+Using the `iris` dataset built into R, let's use some _Iris_ trait data as examples of different ways to lay out your data.
+
+## Wide-form data
+
+```{r wide-output, echo=FALSE}
+iris %>%
+  split(.$Species) %>%
+  map(select, -Species) %>%
+  map(slice, 1:3)
+```
+
+## Classic long-form data
+
+```{r long-output, echo=FALSE}
+iris %>%
+  group_by(Species) %>%
+  slice(1:5) %>%
+  select(Species, Sepal.Length:Petal.Width) %>%
+  as.data.frame()
+cat("...")
+```
+
+## We can get longer...
+
+```{r very-long-output, echo=FALSE}
+iris %>%
+  group_by(Species) %>%
+  slice(1:3) %>%
+  gather(trait, trait_value, -Species) %>%
+  ungroup() %>%
+  slice(1:15) %>%
+  as.data.frame()
+cat("...")
+```
+
+# ...
+
+```{r, eval=FALSE}
+ggplot(data, aes(x, y)) +
+  geom_point() +
+  geom_line(lty = 123)
+```
