--- a/index.Rmd
+++ b/index.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Data wrangling & manipulation in R"
 subtitle: "Dept. Biological Sciences Postgraduate Workshop"
-author: "Ruan van Mazijk"
+author: "Ruan van Mazijk, MSc candidate"
 date: "`r Sys.Date()`"
 fig_caption: yes
 output:
@@ -40,17 +40,35 @@ knitr::include_graphics("images/motivating-example/motivating-example-3.png")
 
 ## Workshop outline
 
-<!-- TODO -->
+>- Embracing the rectangle
+>- **Making** your data rectangular
+>- Things to see & do in rectangle land
+>- `mutate()` & friends---How to extend your raw dataset
+>- ~~Complicated~~ Exotic problems
 
-## Long vs wide data
+# Embracing the rectangle
 
-```{r motivating-example-again, echo=FALSE, out.width="800px"}
+<!-- TOC:
+- Long vs wide data
+- The advantages of rectangular data
+-->
+
+## Long vs wide data {.build}
+
+Remember this?
+
+```{r motivating-example-again, echo=FALSE, out.width="600px"}
 knitr::include_graphics("images/motivating-example/motivating-example-1.png")
 ```
 
-Using the `iris` dataset built into R, let's use some _Iris_ trait data as examples of different ways to lay out your data.
+Let's move away from that...
 
-## Wide-form data
+Using the `iris` dataset built into R $\rightarrow$ <br>
+_Iris_ trait data
+
+***
+
+### Wide-form data
 
 ```{r wide-output, echo=FALSE}
 iris %>%
@@ -59,7 +77,9 @@ iris %>%
   map(slice, 1:3)
 ```
 
-## Classic long-form data
+***
+
+### Classic long-form data
 
 ```{r long-output, echo=FALSE}
 iris %>%
@@ -70,7 +90,9 @@ iris %>%
 cat("...")
 ```
 
-## We can get longer...
+***
+
+### We can get longer...
 
 ```{r very-long-output, echo=FALSE}
 iris %>%
@@ -83,10 +105,24 @@ iris %>%
 cat("...")
 ```
 
-# ...
+## The advantages of long data
 
-```{r, eval=FALSE}
-ggplot(data, aes(x, y)) +
-  geom_point() +
-  geom_line(lty = 123)
-```
+>- Machine-readable
+>- The standard for most software/R-functions <br>
+   (e.g. `lm()`, `plot()`, `ggplot()`)
+>- How most statistical methods treat data mathematically
+>- Easier to subset & wrangle further!
+
+# **Making** your data rectangular
+
+## What are your options?
+
+Easiest to lay it out like that from the start...
+
+Tools to follow assume your data is nice & _tidy_
+
+# Things to see & do in rectangle land
+
+# `mutate()` & friends---<br> How to extend your raw dataset
+
+# ~~Complicated~~ <br> Exotic problems
